Adding Images and Functioning in index.html web page

--- a/index.html
+++ b/index.html
@@ -19,29 +19,29 @@
         <div class="mianContent">
             <div class="reviewSection">
                 <div class="reviewImage">  
-                    <img src="images/bgimg-01.jpeg" alt="Profile Image" class="demoImage">
+                    <img src="images/bgimg-01.jpeg" alt="Profile Image" class="demoImage" id="proImage">
                 </div>
                 <div class="doubleQuotes">
-               
+                    
                 </div>
             </div>
             <div class="userNameDiv">
-                <span class="userName">Susan Smith</span>
-                <span class="profession">WEB DEVELOPER</span>
+                <span class="userName" id="Name">Susan Smith</span>
+                <span class="profession" id="Profession">WEB DEVELOPER</span>
             </div>
-            <div class="profileDescription">
+            <div class="profileDescription" id="description">
                 <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit incidunt voluptatum impedit blanditiis a, vel vitae unde quo nobis, aperiam recusandae, neque amet tenetur! Maxime accusantium animi hic vel molestiae.</p>
             </div>
             <div class="iocnsDiv">
-                <button class="iconsbtn"> 
+                <button class="iconsbtn previousBtn"> 
                     <i class="fas fa-chevron-left"></i>     
                 </button>
-                <button class="iconsbtn"> 
+                <button class="iconsbtn forwardBtn"> 
                     <i class="fas fa-chevron-right"></i>    
                 </button>
             </div>
             <div class="surpriseBtnDiv">
-                <button class="surprisebtn"> Surprise Me</button>
+                <button class="surprisebtn randomBtn"> Surprise Me</button>
             </div>
         </div>
     </article>
